# RLBot-BM_CPP

./: .gitmodules  CMakeLists.txt  README.md
inc/rlbot/: bmInterface.h  bot.h  controller.h
src/: bmInterface.cc  botmanager.cc  botprocess.cc  sockets_windows.cc
